2009-09-21 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_forms.c, fdesign/fd_groups.c,
	fdesign/fd_super.c: Two bugs in fdesign, found
	by Werner Heisch, removed.

2009-09-20 Jens Thoms Toerring    <jt@toerring.de>

	Minor corrections in the documentation.

2009-09-16 Jens Thoms Toerring    <jt@toerring.de>

	* lib/include/Basic.h: Removed a nonexistent color
	that had made it into the list of colors as Werner
	Heisch pointed out.

2009-09-15 Jens Thoms Toerring    <jt@toerring.de>

	* lib/events.c: general callbacks for events for user
	generated windows weren't called anymore, repaired.
	* lib/include/xpopup.h: Broken define Rouben Rostamian
	found for the fl_setpup_default_checkcolor() repaired.

2009-09-14 Jens Thoms Toerring    <jt@toerring.de>

	* lib/thumwheel.c, lib/validator.c: Fixed return
	behaviour of thumbwheel.

2009-09-13 Jens Thoms Toerring    <jt@toerring.de>

	* lib/input.c: Further problems with beep and
	input objects removed.

2009-09-12 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/sp_spinner.c: Added forgotten output to
	C file for setting colors and text size and style.

	* lib/input.c: Removed beep on valid input into
	FL_INT_INPUT and FL_FLOAT_INPUT objects.

2009-09-11 Jens Thoms Toerring    <jt@toerring.de>

	* lib/flcolor.c, lib/include/Basic.h: New pre-defined
	colors added as proposed and assembled by Rob Carpenter.

	* lib/spinner.c: Corrections to return behaviour of
	spinner objects as pointed out by Werner Heisch.

2009-09-08 Jens Thoms Toerring    <jt@toerring.de>

	* lib/input.c: Bug in copy-and-paste and found by Werner
	Heisch repaired.

	* lib/include/zzz.h: defines of 'TRUE' and 'FALSE'
	relaced by 'FL_TRUE' and 'FL_FALSE' to avoid problems
	for other programs that may define them on their own
	(thanks to Serge Bromow for pointing out that this
	can be a real problem).

2009-09-06 Jens Thoms Toerring    <jt@toerring.de>

	Some more bugs in fdesign, found by Werner Heisch,