@@ -15,10 +15,11 @@ mouse clicks or a key presses. Now a pre-emptive handler is a function
 which, if installed, gets called first by the main module when an
 event for the object occurs. The pre-emptive handler has the option to
 override the built-in handler by informing the main module not to call
-the built-in handler, thus altering the behavior of the object. A post
-handler, on the other hand, is called when the object handler has
-finished its tasks and thus does not offer the capability of
-overriding the built-in handler. It is much safer, however.
+the built-in handler (and a possibly also installed post handler),
+thus altering the behavior of the object. A post handler, on the other
+hand, is called when the object handler has finished its tasks and
+thus does not offer the capability of overriding the built-in handler.
+It is much safer, however.
 
 The API to install a pre- or post-handler for an object is as follows
 @tindex FL_HANDLEPTR
@@ -47,9 +48,9 @@ of the Form Library have a corresponding Xevent and thus dereferencing
 of @code{xev} should only be done after making sure it is not
 @code{NULL}.
 
-Notice that the pre- and post-handler have the same function prototype
-as the built-in handler. Actually they are called with exactly the
-same parameters by the event dispatcher. The pre-handler should return
+The pre- and post-handler have the same function prototype as the
+built-in handler. Actually they are called with exactly the same
+parameters by the event dispatcher. The pre-handler should return
 @tindex FL_PREEMPT
 @code{FL_PREEMPT} to prevent the dispatcher from calling the normal
 object handler for events and @code{!FL_PREEMPT} if the objects
@@ -58,6 +59,13 @@ anything, the return value is not used. Note that a post-handler will
 receive all events even if the object the post-handler is registered
 for does not. For example, a post-handler for a box (a static object
 that only receives @code{FL_DRAW}) receives all events.
+
+Note that when an object has been de-activated using
+@code{@ref{fl_deactivate_object()}} (or the whole form the object
+belongs to is de-activated via calls of
+@code{@ref{fl_deactivate_form()}} or
+@code{@ref{fl_deactivate_all_forms()}}) also pre-emptive and
+post-handlers won't get invoked for the object.
 
 See the demo programs @file{preemptive.c} and @file{xyplotall.c} for
 examples. Bear in mind that modifying the built-in behavior is in
